fix chat names word wrapping

--- a/src/client/styles/app.styl
+++ b/src/client/styles/app.styl
@@ -379,6 +379,7 @@ a:hover,a:active,a:focus
     overflow-y hidden
     text-align right
     height 16px
+    white-space nowrap
   .msg
     float left
     width 69%
